--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<iframe src="info.html" width="512" height="512">
-<a src="strongapps.github.io/oximiron-/"><button>Oximiron</button></a>
-<a src="strongapps.github.io/swipe/"><button>Swipe</button></a>
-<a src="strongapps.github.io/cDevAppStore/"><button>App Store</button></a>
+<!DOCTYPE html>
+<html>
+<head><title>Websites</title></head>
+<body>
+<br><a src="strongapps.github.io/oximiron-/"><button>Oximiron</button></a>
+<br><a src="strongapps.github.io/swipe/"><button>Swipe</button></a>
+<br><a src="strongapps.github.io/cDevAppStore/"><button>App Store</button></a>
+</body>
+</html>
