--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head><title>Websites</title></head>
 <body>
-<br><a src="strongapps.github.io/oximiron-/"><button>Oximiron</button></a>
-<br><a src="strongapps.github.io/swipe/"><button>Swipe</button></a>
-<br><a src="strongapps.github.io/cDevAppStore/"><button>App Store</button></a>
+<br><a src="strongapps.github.io/oximiron-/">Oximiron</a>
+<br><a src="strongapps.github.io/swipe/">Swipe</a>
+<br><a src="strongapps.github.io/cDevAppStore/">App Store</a>
 </body>
 </html>
